# Algoritmos

./: .epdf.pub_introduction-to-algorithms-third-edition.pdf.icloud
Final/Trees/: CS2100 Skip List.pptx
Parcial/: .Práctica punteros - I.pdf.icloud
Parcial/Resumen/: .IMG_1958.HEIC.icloud  .IMG_1959.HEIC.icloud  .IMG_1960.HEIC.icloud  .IMG_1961.HEIC.icloud  .IMG_1962.HEIC.icloud  .IMG_1963.HEIC.icloud  .IMG_1964.HEIC.icloud  .IMG_1965.HEIC.icloud  .IMG_1966.HEIC.icloud  .IMG_1967.HEIC.icloud
Parcial/sorts/: Algoritmo Sort_ Merge Sort (06_04).pptx  Counting Sort 13_04_2020.pptx  RADIX SORT.pptx
Semana 1/ShellSort/: CMakeLists.txt  main.cpp
Semana 2/probando/: CMakeLists.txt  circular.h  forward.h  linked.h  main.cpp  node.h  queue.h  stack.h
Semana 2/probando/iterators/: bidirectional_iterator.h  forward_iterator.h
Semana 6/: Equation 2.h  Equation.h  Token.h
TESTING/: CMakeLists.txt  main.cpp
